# coral-example-projects

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
SRE-agent/: .dockerignore  .env.example  .mcp.json  Dockerfile  GUIDE.md  README.md  plan.md  pyproject.toml
SRE-agent/demo-app/: Dockerfile  main.py  pyproject.toml
SRE-agent/deploy/: README.md  deployment.yaml  hello-service.yaml  namespace.yaml  secret.example.yaml
SRE-agent/docs/: oss-model-comparison.md  spike-claude-agent-sdk.md  spike-opencode.md
SRE-agent/notebooks/: local_sre_agent.ipynb  pedantic_sre_agent.ipynb  pydantic_sre_agent.ipynb
SRE-agent/scripts/: bootstrap.sh  configure_coral.sh  create_private_repo.sh  demo_trigger_alert.sh  docker-entrypoint.sh  run_agent.sh  run_slackbot.sh  start_coral_mcp.sh  write_mcp_config.py
SRE-agent/src/sre_agent/: __init__.py  agent.py  cli.py  coral_mcp.py  onboarding_ui.py  slack_streaming.py  slack_thread_history.py  slackbot.py
SRE-agent/src/sre_agent/core/: agent.py  coral_mcp.py
SRE-agent/src/sre_agent/local/: cli.py  onboarding.py  onboarding_ui.py
SRE-agent/src/sre_agent/slack/: bot.py  format.py  streaming.py  thread_history.py
SRE-agent/tests/: test_prompt.py
